--- a/costmap_msgs/CMakeLists.txt
+++ b/costmap_msgs/CMakeLists.txt
@@ -17,6 +17,10 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
 
 # uncomment the following section in order to fill in
 # further dependencies manually.
@@ -38,6 +42,8 @@ find_package(rosidl_default_generators REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/GetCostMap.srv"
   "srv/GetInflatedCostMap.srv"
+  "msg/CostMapMsg.msg"
+  DEPENDENCIES sensor_msgs std_msgs nav_msgs
 )
 
 ament_package()
